--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,14 +1,33 @@
-<!DOCTYPE html>
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>expense-tracker</title>
-</head>
-
-<body>
-  <h1>main</h1>
-  {{{ body }}}
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/stylesheets/bootstrap.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css" />
+    <link rel="stylesheet" href="/stylesheets/main.css" />
+    <title>家庭記帳本</title>
+  </head>
+  <body>
+    <header>
+      <!-- navigation -->
+      <nav class="navbar navbar-light" style="background-color: #ffc851">
+        <div class="container">
+          <a class="navbar-brand" href="/">
+            <i class="fas fa-comment-dollar"></i>
+            家庭記帳本
+          </a>
+          {{#if true}}
+            <a href="/users/logout" class="btn btn-outline-Dark">Logout</a>
+          {{else}}
+            <a href="/users/login" class="btn btn-outline-Dark">Login</a>
+          {{/if}}
+        </div>
+      </nav>
+    </header>
+    {{{body}}}
+    <script src="/javascripts/jquery-3.6.0.min.js"></script>
+    <script src="/javascripts/popper.min.js"> </script>
+    <script src="/javascripts/bootstrap.js"></script>
+  </body>
 </html>
