--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,6 +1,6 @@
 <div class="container expense-new-form mt-5">
   <label class="" for="name">*必填欄位:</label>
-  <h1 class="text-center">請輸入你的支出</h1>
+  <h1 class="text-center">請修改你的支出</h1>
   <form action="/expenses" method="POST">
     <div class="form-group">
       <label for="name">*名稱:</label>
@@ -27,7 +27,7 @@
       <input type="number" class="form-control" id="amount" name="amount" placeholder="輸入金額" required />
     </div>
     <div class="text-center">
-      <button type="submit" class="btn btn-warning">新增支出</button>
+      <button type="submit" class="btn btn-warning">送出修改</button>
       <a href="/" class="btn btn-warning">返回首頁</a>
     </div>
   </form>
