feat: add index page

--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,4 +1,4 @@
-<div class="container expense-new-form mt-5">
+<div class="container page-contain mt-5">
   <label class="" for="name">*必填欄位:</label>
   <h1 class="text-center">請修改你的支出</h1>
   <form action="/expenses" method="POST">
