--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,20 @@
-.expense-new-form {
-  max-width: 600px;
+.page-contain {
+  max-width: 500px;
+}
+
+.index-total-amount {
+  font-size: 80px;
+  color: #ffc851;
+  line-height: 1;
+}
+
+#expense-items li:nth-child(odd) {
+  background-color: #e6e6e6;
+}
+
+#expense-items li i {
+  font-size: 40px;
+  color: #007eff;
 }
 
 * {
