feat: add post new expense route

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -61,7 +61,7 @@
           </div>
           <div class="flex-grow-1"><div>午餐</div><div>2019/04/23</div></div>
           <div class="mr-2">60$</div>
-          <a class="btn btn-link" href="./expense/1/edit">編輯</a>
+          <a class="btn btn-link" href="./expenses/1/edit">編輯</a>
           <form class="" action="./expense/1?_method=DELETE" method="POST" style="margin-block-end:0">
             <button class="btn btn-link" type="submit">刪除</button>
           </form>
@@ -71,7 +71,7 @@
     </ul>
   </div>
   <div class="text-center mt-3">
-    <a href="/" class="btn btn-warning">新增支出</a>
+    <a href="/expenses/new" class="btn btn-warning">新增支出</a>
   </div>
 
 </div>
