--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -11,16 +11,12 @@
       <input type="date" class="form-control" id="date" name="date" placeholder="輸入日期" required />
     </div>
     <div class="form-group">
-      <label for="category" class="form-label">類別</label>
-      <input class="form-control" list="categoryOptions" id="category" name="category" placeholder="輸入類別" required />
-      <datalist id="categoryOptions">
-        {{! todo: 改為讀取資料庫字串  }}
-        <option value="家居物業"></option>
-        <option value="交通出行"></option>
-        <option value="休閒娛樂"></option>
-        <option value="餐飲食品"></option>
-        <option value="其他"></option>
-      </datalist>
+      <label for="categoryId" class="form-label">*類別</label>
+      <select class="custom-select form-control" id="categoryId" name="categoryId" placeholder="輸入類別" required>
+        {{#each categories}}
+          <option value="{{this.id}}">{{this.name}}</option>
+        {{/each}}
+      </select>
     </div>
     <div class="form-group">
       <label for="amount">*金額:</label>
