--- a/views/new.hbs
+++ b/views/new.hbs
@@ -13,11 +13,9 @@
     <div class="form-group">
       <label for="categoryId" class="form-label">*類別</label>
       <select class="custom-select form-control" id="categoryId" name="categoryId" placeholder="輸入類別" required>
-        <option value="1">家居物業</option>
-        <option value="2">交通出行</option>
-        <option value="3">休閒娛樂</option>
-        <option value="4">餐飲食品</option>
-        <option value="5">其他</option>
+        {{#each categories}}
+          <option value="{{this.id}}">{{this.name}}</option>
+        {{/each}}
       </select>
     </div>
     <div class="form-group">
