--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,26 +1,26 @@
 <div class="container page-contain mt-5">
   <label class="" for="name">*必填欄位:</label>
   <h1 class="text-center">請修改你的支出</h1>
-  <form action="/expenses" method="POST">
+  <form action="/expenses/{{expense.id}}?_method=PUT" method="POST">
     <div class="form-group">
       <label for="name">*名稱:</label>
-      <input type="text" class="form-control d-block" id="name" name="name" placeholder="輸入名稱" required />
+      <input type="text" class="form-control d-block" id="name" name="name" placeholder="輸入名稱" value="{{expense.name}}" required />
     </div>
     <div class="form-group">
       <label for="date">*日期:</label>
-      <input type="date" class="form-control" id="date" name="date" placeholder="輸入日期" required />
+      <input type="date" class="form-control" id="date" name="date" placeholder="輸入日期" value={{formatDate expense.date "-"}} required />
     </div>
     <div class="form-group">
       <label for="categoryId" class="form-label">*類別</label>
       <select class="custom-select form-control" id="categoryId" name="categoryId" placeholder="輸入類別" required>
         {{#each categories}}
-          <option value="{{this.id}}">{{this.name}}</option>
+          <option value="{{this.id}}" {{#isEqual this.id ../expense.categoryId}}selected{{/isEqual}}>{{this.name}}</option>
         {{/each}}
       </select>
     </div>
     <div class="form-group">
       <label for="amount">*金額:</label>
-      <input type="number" class="form-control" id="amount" name="amount" placeholder="輸入金額" required />
+      <input type="number" class="form-control" id="amount" name="amount" placeholder="輸入金額" value={{expense.amount}} required />
     </div>
     <div class="text-center">
       <button type="submit" class="btn btn-warning">送出修改</button>
