--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,11 @@
 <div class="container page-contain mt-5">
-  <form action="/" method="GET" id="sort-form">
+  <form action="/" method="GET" id="category-form">
     <div class="input-group">
-      <select class="custom-select custom-select-lg" name="sort" id="sort-combo" onchange="sort-form.submit()">
-        <option value="categoryId" {{#if sort.categoryId}}selected{{/if}}>類別</option>
-        <option value="date" {{#if sort.date}}selected{{/if}}>日期</option>
-        <option value="amount" {{#if sort.amount}}selected{{/if}}>金額</option>
+      <select class="custom-select custom-select-lg" name="category" onchange="category-form.submit()">
+        <option value=0 {{#isEqual 0 categoryId}}selected{{/isEqual}}>全部</option>
+        {{#each categories}}
+        <option value={{this.id}} {{#isEqual this.id ../categoryId}}selected{{/isEqual}}>{{this.name}}</option>
+        {{/each}}
       </select>
     </div>
   </form>
@@ -24,7 +25,7 @@
           <div class="flex-grow-1"><div>{{this.name}}</div><div>{{formatDate this.date "/"}}</div></div>
           <div class="mr-2">{{this.amount}}$</div>
           <a class="btn btn-link" href="./expenses/{{this.id}}/edit">編輯</a>
-          <form class="" action="./expenses/{{this.id}}?_method=DELETE" method="POST" style="margin-block-end:0">
+          <form action="./expenses/{{this.id}}?_method=DELETE" method="POST" style="margin-block-end:0">
             <button class="btn btn-link" type="submit">刪除</button>
           </form>
         </div>
